--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                             onmouseout="btnRecordOut(this)">
                     </button>
                     <div class="form-group" style="margin-top:30px;font-weight:400">
-                    	按住上方按鈕錄音，放開後傳送錄音
+                    	Press and hold the button to reord your command. Release the button to send the command.
                     </div>
                     <div class="form-group" style="margin-top:30px">
                         <label for="txtPhrase">
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <span id="spinIntent" style="visibility: hidden" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
-                        <label for="txtIntent">機器人嘅回應:</label>
+                        <label for="txtIntent">Reply from Bot:</label>
                         <textarea class="form-control" rows="4" id="txtIntent" readonly="readonly"></textarea>                    </div>
                 </div>
                 <div class="col-xs-6" style="display: block; float: none; width: 100%; padding-left: 50px; padding-right: 50px; vertical-align: middle">
