--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                     <div class="form-group" style="margin-top:30px">
                         <label for="txtPhrase">
                             <span id="spinPhrase" style="visibility: hidden" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
-                            您:</label>
+                            You:</label>
                         <input type="text" class="form-control" id="txtPhrase" readonly="readonly">
                     </div>
                     <div class="form-group">
